using UnityEngine;

namespace Sample.FlyWeight
{
    public interface SlimeFlyWeight
    {
        void Appear();
    }
}